@@ -26,7 +26,7 @@
     </td>
     
     <td>
-    <font size="+1"><b>Linux</b></font>
+    <font size="+1"><b>GNU/Linux</b></font>
     </td>
     <td>
     </td>
@@ -40,7 +40,7 @@
 <tr>
     <td>
       <p align="center">
-	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
+	<img src="@IMAGES@officiallogo-nd-50.png">
       </p>
     </td>
     
@@ -60,7 +60,7 @@
     <tr>
     <td>
       <p align="center">
-	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
+	<img src="@IMAGES@openlogo-nd-50.png">
       </p>
     </td>
     <td>
@@ -251,7 +251,7 @@
   </tr>
 
   <tr bgcolor="#e8ffe8" >
-<td></td><td colspan=6><h3>Linux</h3></td>
+    <td></td><td colspan="6"><h3>GNU/Linux</h3></td>
   </tr>
   
   <tr>
@@ -279,7 +279,7 @@
   <tr>
     <td>
       <p align="center">
-	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
+	<img src="@IMAGES@openlogo-nd-50.png">
       </p>
     </td>
     <td>
@@ -298,7 +298,7 @@
       <tr>
     <td>
       <p align="center">
-	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
+	<img src="@IMAGES@openlogo-nd-50.png">
       </p>
     </td>
     <td>
